# iClinic-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3f858e4ff5bf_add_createdat_and_updated_at_to_the_.py  4abcdb15216b_add_createdat_and_updated_at_to_the_.py  6c9f2649f795_update_session_table_to_keep_jti_not_.py  990ca18fda90_update_schema_to_handle_the_walkin_users.py  a0651253187c_user_patient_provider_schema_update.py  a645d18b8614_initial_schema.py
scripts/: seed.py
src/: main.py
src/api/middleware/: error_handler.py  logging.py
src/api/rest/: app.py  dependencies.py
src/api/rest/routes/: auth.py  chat.py  dashboard.py  frontdesk.py  health.py  (+1 more)
src/config/: settings.py
src/constants/: admin.py  auth.py  logging.py  url.py
src/control/agent/: graph.py  nodes.py  prompts.py  schemas.py
src/control/agents/: create_agent.py
src/core/services/: agent_service.py  auth_service.py  dashboard_service.py  frontdesk_service.py  notification.py  twilio_service.py  voice_service.py
src/data/clients/: checkpointer.py  postgres.py  redis.py
src/data/repositories/: appointment_repository.py  appointment_type_repository.py  patient_repository.py  provider_repository.py  role_repository.py  session_repository.py  slot_repository.py  user_repository.py
src/observability/logging/: __init__.py  agent.py  config.py  context.py  formatter.py  logger.py
src/schemas/: auth.py  dashboard.py  frontdesk.py
src/utils/: auth.py  db_utils.py  email_utils.py  generate_uuidv7.py  sms_utils.py
(+12 files in other folders)
