[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "passlib[bcrypt]>=1.7.4",
    "fastapi>=0.133.1",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.4",
    "pyjwt>=2.9.0",
    "psycopg-pool>=3.3.0",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.47",
    "twilio>=9.10.2",
    "uuid6>=2025.0.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic[email]>=2.12.5",
    "langsmith>=0.7.7",
    "langchain-openai>=1.1.11",
]
